--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-elements": "^0.12.1",
+    "react-native-image-picker": "^0.26.3",
+    "react-native-parallax-scroll-view": "^0.19.0",
+    "react-native-scrollable-tab-view": "^0.6.6",
     "react-native-smart-pull-to-refresh-listview": "^1.6.10",
     "react-native-vector-icons": "^4.1.1"
   },
